# pfsense-mcp-server

./: .dockerignore  .env.enhanced  .env.example  .env.simple  .env.test  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.simple  LICENSE  Makefile  Makefile.simple  PFSENSE_API_AUDIT.md  PFSENSE_API_INSTALLATION.md  README-SIMPLE.md  README.md  RELEASE_AUDIT.md  docker-compose-simple.yml  docker-compose.yml  docker-entrypoint.sh  main.py  main_enhanced_mcp.py  main_fastmcp.py  main_pfsense_api_v2.py  mcp.json  pfsense_api_integration.py  pyproject.toml  requirements-fastmcp.txt  requirements-simple.txt  requirements.txt  run.py  test_mcp.py  test_pfsense_api_v2.py
.claude/: settings.json
.github/workflows/: ci.yml
config/nginx/: nginx.conf
config/otel/: otel-collector-config.yaml
config/postgres/: init.sql
config/prometheus/: prometheus.yml
config/ssh/: README.md
docs/: CLAUDE_DESKTOP_SETUP.md  CONFIGURATION.md  ENHANCED_FEATURES.md  GENAI_INTEGRATION.md  MCP_TOOLS.md  PERMISSIONS.md
scripts/: backup.sh  generate_token.py  health_check.sh  install_claude_desktop.sh  test_connection.py
src/: __init__.py  client.py  guardrails.py  helpers.py  main.py  middleware.py  models.py  pfsense_api_enhanced.py  server.py
src/tools/: __init__.py  aliases.py  certificates.py  dhcp.py  dhcp_advanced.py  diagnostics.py  dns_forwarder.py  dns_resolver.py  firewall.py  firewall_schedules.py  firewall_states.py  interfaces.py  logs.py  misc_services.py  nat.py  nat_onetoone.py  nat_outbound.py  pkg_acme.py  pkg_bind.py  pkg_freeradius.py  (+15 more)
tests/: conftest.py  test_api_client.py  test_enhanced_features.py  test_guardrails.py  test_helpers.py  test_main.py  test_permissions.py
(+11 files in other folders)
